# rikka

./: Cargo.toml  TODO.md
assets/SunTemple-glTF/: README.txt  suntemple.gltf
data/: deferred_graph.json  deferred_mesh_shader.json  fullscreen.json  pbr_lighting.json  scene_config.json  simple_pbr.json
data/graphs/: deferred_mesh_shader_graph.json  simple_pbr_graph.json
rikka/: Cargo.toml
rikka/src/: app.rs  camera.rs  main.rs
rikka/src/renderer/: camera.rs  gltf.rs  loader.rs  mod.rs  renderer.rs  scene.rs
rikka_core/: Cargo.toml
rikka_core/src/: lib.rs
rikka_gpu/: Cargo.toml
rikka_gpu/src/: barrier.rs  barriers.rs  buffer.rs  command_buffer.rs  constants.rs  descriptor_set.rs  device.rs  escape.rs  factory.rs  frame.rs  gpu.rs  handle.rs  image.rs  instance.rs  lib.rs  mesh_shader.rs  physical_device.rs  pipeline.rs  query.rs  queue.rs  sampler.rs  shader_state.rs  surface.rs  swapchain.rs  synchronization.rs  transfer.rs  types.rs
rikka_graph/: Cargo.toml
rikka_graph/src/: builder.rs  graph.rs  lib.rs  parser.rs  types.rs
rikka_renderer/: Cargo.toml
rikka_renderer/src/: gltf.rs  lib.rs  renderer.rs  scene.rs  types.rs
rikka_renderer/src/loader/: asynchronous.rs  mod.rs  technique.rs
rikka_renderer/src/pass/: depth_of_field.rs  depth_pre.rs  gbuffer.rs  mod.rs  pbr_lighting.rs  simple_pbr.rs  transparent.rs
rikka_renderer/src/scene_renderer/: gltf.rs  gpu_types.rs  material.rs  mesh.rs  meshlet.rs  mod.rs  scene_renderer.rs  types.rs
rikka_rhi/: Cargo.toml
rikka_rhi/src/: barriers.rs  buffer.rs  command_buffer.rs  constants.rs  deletion_queue.rs  device.rs  frame.rs  graphics_pipeline.rs  image.rs  instance.rs  lib.rs  physical_device.rs  query.rs  queue.rs  rhi.rs  sampler.rs  shader_state.rs  surface.rs  swapchain.rs  synchronization.rs  texture.rs  types.rs
rikka_shader/: Cargo.toml
rikka_shader/src/: compiler.rs  lib.rs  reflect.rs  types.rs
shaders/: common.lib.glsl  fullscreen.frag.glsl  fullscreen.frag.glsl.spv  fullscreen.vert.glsl  fullscreen.vert.glsl.spv  gbuffer.frag.glsl  gbuffer.frag.glsl.spv  gbuffer.mesh.glsl  gbuffer.mesh.glsl.spv  gbuffer.task.glsl  gbuffer.task.glsl.spv  hardcoded_triangle.vert  hardcoded_triangle.vert.spv  main.vert  mesh.lib.glsl  meshlet.lib.glsl  pbr_bindless.frag  pbr_lighting.frag.glsl  pbr_lighting.vert.glsl  scene.lib.glsl  simple.frag  simple.frag.spv  simple.mesh  simple.mesh.spv  simple.vert  simple.vert.spv  simple_pbr.frag  simple_pbr.frag.glsl  simple_pbr.frag.glsl.spv  simple_pbr.frag.spv  simple_pbr.vert  simple_pbr.vert copy.spv  simple_pbr.vert.glsl.spv  simple_pbr.vert.spv  simple_texture.frag  simple_texture.frag.spv  simple_texture.vert  simple_texture.vert.spv
shaders/fullscreen/: fullscreen.frag  fullscreen.frag.spv
