[package]
name = "rikka_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ash-window = "0.12.0"
bitflags = "1.3.2"
crossbeam-channel = "0.5.7"
gpu-allocator = "0.21.0"
log = "0.4.17"
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"

rikka_core = { path = "../rikka_core" }
rikka_shader = { path = "../rikka_shader" }
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
