[package]
name = "rikka_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
env_logger = "0.10.0"
log = "0.4.17"

rikka_core = { path = "../rikka_core" }
rikka_gpu = { path = "../rikka_gpu" }
anyhow = "1.0.70"
serde_json = "1.0.95"
serde_derive = "1.0.159"
parking_lot = "0.12.1"
