[package]
name = "rikka_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rikka_core = { path = "../rikka_core" }
rikka_graph = { path = "../rikka_graph"}
rikka_gpu = { path = "../rikka_gpu" }

env_logger = "0.10.0"
log = "0.4.17"
winit = "0.27.5"
anyhow = "1.0.68"
image = "0.24.5"
gltf = "1.1.0"
ddsfile = "0.5.1"
bitflags = "2.0.2"
crossbeam-channel = "0.5.7"
serde = "1.0.159"
serde_json = "1.0.95"
serde_derive = "1.0.159"
parking_lot = "0.12.1"

