[package]
name = "rikka_rhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ash = "0.37.2"
ash-window = "0.12.0"
env_logger = "0.10.0"
gpu-allocator = "0.21.0"
log = "0.4.17"
raw-window-handle = "0.5.0"
