[package]
name = "rikka_shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
spirv-reflect = { path = "../../spirv-reflect-rs" }

rikka_core = { path = "../rikka_core" }
