[package]
name = "rikka_shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rikka_core = { path = "../rikka_core" }
spirv-reflect = { path = "../../spirv-reflect-rs" }

anyhow = "1.0.68"
log = "0.4.17"
serde = "1.0.159"
serde_derive = "1.0.159"

